# rustomaton

./: Cargo.toml  README.md
rustomaton/: Cargo.toml
rustomaton/src/: lib.rs
rustomaton_derive/: Cargo.toml
rustomaton_derive/src/: graph.rs  lib.rs  parse.rs  transfer_fn.rs
rustomaton_derive/tests/: dfa.rs  nfa.rs
rustomaton_macro/: Cargo.toml
rustomaton_macro/src/: graph.rs  lib.rs  parse.rs  transfer_fn.rs
rustomaton_macro/tests/: dfa.rs  nfa.rs
src/: graph.rs  lib.rs  parse.rs
tests/: dfa.rs  nfa.rs  tmp.rs
