[package]
name = "rustomaton_macro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
syn = { version = "1.0", features = ["full"] }
rustomaton = { path = "../rustomaton" }
